[package]
name = "exercise"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "5_6"
path = "src/5_6.rs"

[[bin]]
name = "6_3_1"
path = "src/6_3_1.rs"

[[bin]]
name = "6_7"
path = "src/6_7.rs"

[[bin]]
name = "8_5"
path = "src/8_5.rs"

[[bin]]
name = "9_6"
path = "src/9_6.rs"

[[bin]]
name = "10_7"
path = "src/10_7.rs"

[[bin]]
name = "12_5"
path = "src/12_5.rs"

[[bin]]
name = "13_4"
path = "src/13_4.rs"

[[bin]]
name = "15_7"
path = "src/15_7.rs"

[[bin]]
name = "16_8"
path = "src/16_8.rs"

[[bin]]
name = "17_8"
path = "src/17_8.rs"

[dependencies]
